# PASS

./: .buildinfo  .continueignore  .gitignore  CMakeLists.txt  README-zh.md  README.md  _config.yml  genindex.html  gui_launcher.py  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/en/: index.doctree  simulation.doctree  theory.doctree  tracking.doctree
.doctrees/zh/: index.doctree  injection.doctree  simulation.doctree  theory.doctree  tracking.doctree
.github/workflows/: sphinx.yml
PASS/: __init__.py  main.py
PASS/commands/: __init__.py  command.py  injection.py
PASS/commands/element/: drift.py
PASS/commands/monitor/: statistic.py
PASS/core/: beam.py  bunch.py  config.py  executor.py  particle.py  sequence.py  simulation.py  state.py
PASS/gui/: main_window.py
PASS/gui/pages/: injection_page.py  main_para_page.py  monitor_page.py
PASS/gui/widgets/: engineering_spinbox.py  parameter_form.py  unit_spinbox.py
PASS/para/: generate_ramping_file.py  generate_sextupole_ramping_file.py  generate_smooth_approx_twiss.py  get_error_from_madx.py  get_twiss_from_madx.py
PASS/para/builders/: main_builder.py  sequence_builder.py
PASS/para/models/: injection_para.py  monitor_para.py
PASS/para/readers/: madx_twiss_reader.py
PASS/plot/: plot_bucket.py  plot_distribution.py  plot_main.py  plot_trans_phase_space.py  plot_twiss_ellipse.py
PASS/tool/: calc_Brho.py  io_example.py
PASS/utils/: constants.py  helper.py  logger.py
_sources/en/: theory.rst.txt
_sources/zh/: index.rst.txt  injection.rst.txt  simulation.rst.txt
_static/: custom.css
cli/: generate_json.py
config/: config.h  config.h.in
docs/: _config.yml  index.md
docs/.github/workflows/: sphinx.yml
docs/en/: index.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
docs/source/en/: index.rst
docs/source/zh/: index.rst  tracking.rst
docs/zh/: index.md
en/: index.html  simulation.html  theory.html  tracking.html
example/01_generate_distribution/: README.md  beam0.json  generate_json.py  run.py
example/02_particle_tracking/: beam0.json  generate_json.py
gui/: main.py  main_window.py
gui/pages/: injection_page.py  main_para_page.py  twiss_page.py
gui/utils/: version.py
gui/widgets/: console_widget.py  engineering_spinbox.py  no_wheel.py  parameter_form.py  parameter_widget_factory.py  unit_spinbox.py
include/: aperture.h  bunch.h  command.h  constant.h  cutSlice.h  element.h  general.h  injection.h  lattice.h  monitor.h  parallelPlan.h  parameter.h  particle.h  pic.h  readCommand.h  spaceCharge.h  twiss.h
include/cmdline/: cmdline.h
para/: .gitignore  beam0.json  beam1.json  generate_RF_para.py  generate_main.py  generate_simulation_config.py  generate_smooth_approx_twiss.py  get_element_from_madx.py  get_error_from_madx.py  get_twiss_element_from_madx.py  get_twiss_from_madx.py
para/builders/: injection_builder.py  main_builder.py  monitor_builder.py  sequence_builder.py  simulation_builder.py  twiss_builder.py
para/exporters/: json_exporter.py
para/models/: injection_para.py  main_para.py  monitor_para.py  parameter.py  sc_para.py  twiss_para.py
para/readers/: madx_twiss_reader.py
passkit/: __init__.py
passkit/gui/: main.py
passkit/gui/core/: logger.py
passkit/gui/pages/: run_page.py  sc_page.py
passkit/gui/utils/: version.py
passkit/gui/widgets/: console_widget.py  list_line_edit.py  parameter_widget_factory.py  unit_spinbox.py
passkit/para/: generate_main.py  toolkit.py
passkit/para/builders/: injection_builder.py  sc_builder.py  twiss_builder.py
passkit/para/exciter/: generate_tuneExciter_para.py
passkit/para/models/: base_model.py  main_para.py  parameter.py  sc_para.py  twiss_para.py
passkit/tool/: calc_Brho.py  calc_beamPower.py  calc_bucket.py  plot_bucket.py
src/: aperture.cu  bunch.cu  cutSlice.cu  element.cu  general.cu  injection.cu  lattice.cu  main.cpp  monitor.cu  parameter.cpp  particle.cpp  particle.cu  pic.cu  readCommand.cu  spaceCharge.cu  twiss.cu
test/: .gitignore  cal_spaceCharge_factor.py
test/test_field_solver/: generate_5point_FD_matrix.py  test_electricField.py
test/test_space_charge/: test_gauss_distribution.py  test_kv_distribution.py
test/test_twiss_transfer/: 1335_32_beam0_proton_bunch0_10000_stat_StatMonitor_oneturn_0.csv
tool/: calc_Brho.py
zh/: index.html  injection.html  simulation.html  theory.html  tracking.html
