[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PASS"
version = "0.2.0"
description = "Particle Accelerator Simulation Studio"
readme = "README.md"
authors = [
    {name = "Mingxuan Chang", email = "changmx@impcas.ac.cn"},
    {name = "Jie Liu", email = "liujie115@impcas.ac.cn"},
    {name = "Lei Wang", email = "wangl@impcas.ac.cn"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3.2",
    "matplotlib",
    "scipy",
    "pandas",
    "tfs-pandas",
    "h5py",
    "numba-cuda",
    "cuda-python>=13.0.0",
    "cuda-core>=1.0.0",
    "cupy-cuda13x>=14.0.0",
    "cuda-cccl[cu13]>=1.0.0",
    "nvmath-python[cu13]==0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PASS*"]
